--- a/index.html
+++ b/index.html
@@ -194,6 +194,6 @@
     }
 
     function showYouTubeProfile() {
-        window.open('https://www.youtube.com', '_blank');
+        window.open('https://www.youtube.com/@avengersnerd2310', '_blank');
     }
 </script>
